--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ html, body {
   padding: 0;
   overflow: hidden;
   height: 100%;
-  background: #111;
+  background: transparent;
   font-family: sans-serif;
 }
 
@@ -30,7 +30,7 @@ html, body {
 .carousel-track {
   display: flex;
   transition: transform 0.5s ease-in-out;
-  width: 500%; /* 5 images */
+  width: 500%; /* will be overridden dynamically */
 }
 
 .carousel-image {
